Finished CRnNu and renamed chapters

--- a/thesis_skel/thesis_2009_skel.tex
+++ b/thesis_skel/thesis_2009_skel.tex
@@ -200,7 +200,8 @@
 %------------------------------------------------------------------------------
 % Add your chapters here - don't forget to also add them to \includeonly above
 \include{thesis_intro}
-\include{thesis_CRnEAS}
+\include{thesis_CRnNu}
+\include{thesis_EAS}
 \include{thesis_setup}
 \include{thesis_DGL}
 \include{thesis_DGH}
