Completed first draft for EAS chapter

--- a/thesis_skel/thesis_EAS.tex
+++ b/thesis_skel/thesis_EAS.tex
@@ -95,8 +95,18 @@ Charged particles moving through the atmosphere can also produce Cherekov light~
 
 \subsection*{Radio Detection}
 \label{sec:EAS_cher}
+An EAS traversing through the atmosphere can also produce radio signals. The radio emission can be due to the geomagnetic field~\cite{} or the Askaryan effect~\cite{} described before. For air showers the emission due to the geomagnetic effect is supposed to dominate with the Askaryan effectonly contributing in the order of 10-15\%~\cite{}. This affect arises due to the deflection of electrons and positrons produced in the shower leading to the formation of an electron dipole moving through the atmosphere at the speed of light. This results in a forward focussed radio signal with a lateral distribution similar to Cherenkov emission. The radio signal depends on the orientation of geomagnetic field and the atmospheric conditions at the detector. Around 100 m from the shower core the expected frequencies are in the MHz range~\cite{} while near the shower core they are in the GHz range. For such frequencies and primary energies >$10^{17}$eV the emissions from the two different mechanisms is superimposed. The measured electric field scales with the primary energy of the shower.  Typically, to detect radio emission of an EAS several radio antennas are deployed over a wide surface area. These antennas are triggered by particle detector arrays. Self triggering is also being developed which will make the radi antennas a seperate functional unit for EAS detection. Some e.g. of currently operational radio antenna arrays for EAS detection include LOFAR~\cite{} and AERA~\cite{}. The Pierre Auger Observatory is also adding a radio antenna on each unit of their particle detector array which is supposed to become operational by 2024. Other planned experiments include GRAND~\cite{}. Neutrino observatories like RNO-G~\cite{} and IceCube-Gen-2~\cite{} could also potentially detect EAS.  
 
 \subsection*{Particle detector arrays}
 \label{sec:EAS_cher}
+This is one of the oldest detection techniques used to measure and study cosmic rays. It consists of setting up a set of particle detectors spaced by large distances depending on the desired energy range sensitivity of the experiment which is also dependent on the altitude of the experiment. The detectors are usually arranged in a regular pattern, and they are able to detect the secondary particles of EAS at ground by searching for time coincidences between neighbouring stations. By measuring the signal and time delay between the triggered stations the incoming direction of the primary can be estimated to $1-0.5^{\circ}$ of resolution. The core position can also be determined by using the lateral distribution function to fit the recorded signal at the surface detector array. The energy can also be estimated through the measurement of number of muons at ground or cross calibration with other detector systems. Different types of detection methods have been used to combine and act as particle detector arrays. These include Geiger counters at MIT~\cite{}, hodoscopes at ...~\cite{}, scintillators at Volcano ranch~\cite{} and water or ice based Cherenkov detector. Currently scintillator based surface detector arrays and water/ice based Cherenkov tanks are the popularly used EAS detection techniques. 
+
+Water/ice based Cherenkov tanks/detectors can also detect the secondary particles of EAS at ground. These are sensitive to the Cherenkov light which can be produced by these charged particles while travelling through the medium of the detector. The subsequent light is measured using a PMT~\cite{}. This ight signature is different depending on the type of the particle and thus can effectively help in differentiating between muons and electrons. The Pierre Auger Observatory uses an array of water Cherenkov tanks in conjunction with four fluorescence detectors for EAS measurements. IceCube also contains an array of ice based Cherenkov detectors which are used for cosmic ray studies and as a veto for their underground neutrino detectors. MOre details about the Pierre AUger Observatory are presented in chapter~\ref{}
+
+Scintillator based particle detector arrays can be used to distinguish between the different secondary particles of an EAS. These consist of scintillating material which produced detectable photons if a charged particle traverses through the material. If deployed at the surface such detectors can act as excellent discriminators for electron and muons whereas if deployed underground they can only detect muons. The size of the scintillating material controls the zenith angle sensitivity which typically decreases the more inclined the shower is. TA uses a vast array of scintillator based detectors along with three fluorescence detectors to measure EAS. The Pierre Auger Observatory is also testing an array of underground muon detectors which are based directly below its surface array stations.
 
 
+\subsection*{Towards detecting Neutrino Induced Extensive Air Showers}
+Neutrino induced air showers have a particular expected signature. These showers are supposed to start much deeper in the atmosphere in comparison to ordinary cosmic ray showers, in particular proton showers which act as the primary background for their detection. The deeper interaction means less shower development till the shower front reaches the ground in comparison to a cosmic ray induced EAS. This difference in development can be measured by the muon to electron ratio at ground via a particle detector array. Since, the neutrinos are only expected to interact to induce a EAS if the volume of the atmosphere through which they traverse is large enough for zenith angles less than $60^{\circ}$ either the neutrinos are not expected to interact or and even if they do, due to the general amount of atmospheric volume at these angles the cosmic ray showers are supposed to be indistinguishable from a neutrino shower at least for a particle detector array at ground. This is due to the fact that the cosmic ray showers have not developed enough to lose the electromagnetic component of the induced EAS. This leaves the primary distinguishing factor i.e. the muon to electron ratio the same for neutrino and cosmic ray induced showers. The terminology used to determine the development of the shower in the atmosphere is the shower age and typically showers having a larger muonic component at ground are called \textit{old showers} while showers having a larger electromagnetic component at ground are called \textit{young showers}. 
+
+Thus, to detect a neutrino induced EAS using surface detector arrays the smoking gun signal is an inclined ($\approx$ zenith angle > $60^{\circ}$) "young" shower. A perfect neutrino induced EAS detector should have a good angular resolution and a large electron-muon signal separation. However, this signature also not completely background free. Such a signature can also be caused by deeply interacting cosmic ray primaries or highly energetic muons emitting bremsstrahlung photons both of which can also induce a young shower. B meson could also be misidentified as a neutrino as shown in ~\cite{}. Other processes such as low energy showers coincident with a EAS could also act as background for a neutrino detection. These have been studied in detail in ~\cite{} and are negated in the analysis through the techniques developed in the reference. 
